Ajuste: Verificacion de cerrado de tabla cuando hay filtro, aviso de mantenimiento, verificacion de analisis de departamentos y resalto de pozo en busqueda

--- a/src/app/dialog-terminos/dialog-terminos.component.html
+++ b/src/app/dialog-terminos/dialog-terminos.component.html
@@ -7,6 +7,9 @@
     <img src="assets/logo-anh.png" width="153px" height="70px" align="right">
   </div>
 </div>
+<p-message severity="warn"
+  text="El geovisor está en proceso de mantenimiento y mejora, por lo que algunas funcionalidades están en proceso de desarrollo o mejora.">
+</p-message>
 <div id="body">
   <p>
     La Agencia Nacional de Hidrocarburos (ANH) es la institución responsable de administrar el funcionamiento
