--- a/src/app/dialog-terminos/dialog-terminos.component.html
+++ b/src/app/dialog-terminos/dialog-terminos.component.html
@@ -1,15 +1,12 @@
 <div id="header">
   <div>
     <h2>Geovisor ANH v3.0</h2>
-    <h4>Terminos y Condiciones</h4>
+    <h4>Términos y Condiciones</h4>
   </div>
   <div style="align-content: flex-end;">
     <img src="assets/logo-anh.png" width="153px" height="70px" align="right">
   </div>
 </div>
-<p-message severity="warn"
-  text="El geovisor está en proceso de mantenimiento y mejora, por lo que algunas funcionalidades están en proceso de desarrollo o mejora.">
-</p-message>
 <div id="body">
   <p>
     La Agencia Nacional de Hidrocarburos (ANH) es la institución responsable de administrar el funcionamiento
