Ajuste: traslado de procesos del componente ubicar coordenada

--- a/src/app/map-viewer/map-viewer.component.html
+++ b/src/app/map-viewer/map-viewer.component.html
@@ -451,79 +451,7 @@
 <p-dialog header="Ubicar coordenada" [(visible)]="modalCoordinate" [resizable]="false" [focusOnShow]="false"
   [style]="{'width': '411px'}" (onHide)="onHideDialogCoordinate()">
   <div *ngIf="modalCoordinate">
-    <button pButton class="ui-button-rounded ui-button-secondary" title="Ayuda" style="color: #007ad8; float: right;"
-      (click)="requestHelp('h-ubicar-coordenada')" icon="pi pi-question"></button>
-    <button pButton class="ui-button-rounded ui-button-secondary" title="Info" (click)="infoTool = !infoTool"
-      style="color: #007ad8; float: right; margin-right: 5px; box-shadow: none;" icon="pi pi-info"></button>
-    <div>
-      <div>
-        <p>1. Unidades de la coordenada:</p>
-        <p-dropdown [options]="optionsCoordinateUnits" optionLabel="name" [(ngModel)]="coordinateUnits"
-          (onChange)="onChangeCoordinateUnits()" [style]="{'width': '95%'}"></p-dropdown>
-      </div>
-      <div>
-        <p>2. Sistema de coordenadas</p>
-        <p-dropdown [options]="optionsCoordinateSystem" [style]="{'width': '80%'}" [(ngModel)]="coordinateSystem">
-        </p-dropdown>
-      </div>
-      <div>
-        <p>3. Ingrese coordenada</p>
-        <div *ngIf="coordinateUnits.geographical">
-          <div style="display: grid; grid-template-columns: auto auto;">
-            <div class="ui-inputgroup">
-              <span class="ui-inputgroup-addon">{{coordinateUnits.x}}</span>
-              <p-inputMask mask="{{coordinateUnits.mask}}" [(ngModel)]="coordinateX" slotChar="0"></p-inputMask>
-            </div>
-            <div style="padding: 5px;">
-              <p-radioButton name="group1" value="N" [(ngModel)]="lathem" label="Norte ( + )"></p-radioButton>
-              &nbsp;
-              <p-radioButton name="group1" value="S" [(ngModel)]="lathem" label="Sur ( - )"></p-radioButton>
-            </div>
-          </div>
-          <div style="display: grid; grid-template-columns: auto auto; margin-top: 5px;">
-            <div class="ui-inputgroup">
-              <span class="ui-inputgroup-addon">{{coordinateUnits.y}}</span>
-              <p-inputMask mask="{{coordinateUnits.mask}}" [(ngModel)]="coordinateY" slotChar="0"></p-inputMask>
-            </div>
-            <div style="padding: 5px;">
-              <p-radioButton name="group2" value="O" [(ngModel)]="lonhem" label="Oeste ( - )"></p-radioButton>
-            </div>
-          </div>
-        </div>
-        <div *ngIf="!coordinateUnits.geographical">
-          <div class="ui-inputgroup">
-            <span class="ui-inputgroup-addon">{{coordinateUnits.x}}</span>
-            <input type="text" pInputText [(ngModel)]="coordinateX"
-              oninput="this.value=this.value.replace(/[^0-9\,]/g, '');"
-              (ngModelChange)="formatCoordinatePlane(coordinateX, 'X')" autofocus (keypress)="keypress($event)">
-          </div>
-          <div style="margin-top: 5px;">
-            <div class="ui-inputgroup">
-              <span class="ui-inputgroup-addon">{{coordinateUnits.y}}</span>
-              <input type="text" pInputText [(ngModel)]="coordinateY"
-                oninput="this.value=this.value.replace(/[^0-9\,]/g, '');"
-                (ngModelChange)="formatCoordinatePlane(coordinateY, 'Y')" autofocus (keypress)="keypress($event)">
-            </div>
-          </div>
-        </div>
-      </div>
-      <div style="margin-top: 5px;">
-        <p-button label="Borrar anteriores" icon="pi pi-times" (onClick)="clearGraphics()"></p-button>
-        <p-button label="Limpiar campos" icon="fa fa-broom" (onClick)="coordinateX = ''; coordinateY = ''"
-          [style]="{'margin-left': '5px'}"></p-button>
-        <p-button label="Ubicar" icon="pi pi-map-marker" [style]="{'margin-left': '5px'}"
-          (onClick)="locateCoordinate()">
-        </p-button>
-      </div>
-    </div>
-    <br>
-    <p-message [escape]="false" id="infoMedicion" severity="info" *ngIf="infoTool"
-      text="Ingrese los datos solicitados para <b>crear un punto en la coordenada</b>
-      <br>que desea ubicar.
-      <br>Al ingresar Longitud y Latitud se deben <b>llenar todos los espacios</b> 
-      con dígitos entre 0 y 9. Para grados de un sólo dígito use un cero al inicio. Todo lo anterior no aplica para X e Y. 
-      Para X e Y utilice la <b>coma</b> como separador decimal. <b>Máximo</b> valor para X e Y de 1.999.999,9999">
-    </p-message>
+    <app-dialog-ubicate-coordinate [_this]="this"></app-dialog-ubicate-coordinate>
   </div>
 </p-dialog>
 
