--- a/src/app/map-viewer/map-viewer.component.html
+++ b/src/app/map-viewer/map-viewer.component.html
@@ -1,5 +1,5 @@
 <p-toast></p-toast>
-<p-confirmDialog header="Confirmar" icon="pi pi-exclamation-triangle"></p-confirmDialog>
+<p-confirmDialog header="Confirmar" icon="pi pi-exclamation-triangle confirm"></p-confirmDialog>
 <!-- Menú con Accordion -->
 <div id="menu-info" *ngIf="view.ready">
   <p-accordion [expandIcon]="null" [collapseIcon]="null" (onOpen)="onAccordion(true)" (onClose)="onAccordion(false)">
