--- a/src/app/map-viewer/map-viewer.component.html
+++ b/src/app/map-viewer/map-viewer.component.html
@@ -114,24 +114,7 @@
 <p-dialog header="Análisis de Cobertura por Departamento" [(visible)]="modalAnalysis" [resizable]="false"
   (onHide)="onHideDialogAnalisis()" [focusOnShow]="false" [style]="{'width': '390px'}">
   <div *ngIf="modalAnalysis">
-    <button pButton class="ui-button-rounded ui-button-secondary" title="Ayuda" style="color: #007ad8; float: right;"
-      (click)="requestHelp('h-cobertura')" icon="pi pi-question"></button>
-    <button pButton class="ui-button-rounded ui-button-secondary" title="Info" (click)="infoTool = !infoTool"
-      style="color: #007ad8; float: right; margin-right: 5px; box-shadow: none;" icon="pi pi-info"></button>
-    <p>
-      Departamentos seleccionados para el análisis:
-    </p>
-    <p-multiSelect defaultLabel="Seleccione los departamentos para realizar análisis"
-      (onChange)="changeAttrTable($event)" [options]="selectDpto" [(ngModel)]="dptosSelected"
-      optionLabel="attributes.departamen"></p-multiSelect>
-    <br>
-    <p-button icon="pi pi-globe" [disabled]="dptosSelected.length == 0" (click)="generateAnalisisCobertura()"
-      label="Iniciar Análisis de Cobertura"></p-button>
-    <br>
-    <br>
-    <p-message [escape]="false" id="infoMedicion" severity="info" *ngIf="infoTool"
-      text="Con este análisis se obtienen los <b>Bloques Explorativos que se <br> encuentran en la jurisdicción del Departamento</b> seleccionado,<br>indicando el porcentaje de cobertura de cada bloque. Seleccione los departamentos necesarios de la lista.">
-    </p-message>
+    <app-dialog-analysis [_this]="this"></app-dialog-analysis>
   </div>
 </p-dialog>
 <!-- Fin del modal de análisis de cobertura -->
