--- a/src/app/map-viewer/map-viewer.component.html
+++ b/src/app/map-viewer/map-viewer.component.html
@@ -1,5 +1,12 @@
 <p-toast></p-toast>
-<p-confirmDialog header="Confirmar" icon="pi pi-exclamation-triangle confirm"></p-confirmDialog>
+<p-confirmDialog #cd header="Confirmar" icon="pi pi-exclamation-triangle confirm">
+  <p-footer>
+    <button style="width: 48%; float: left;" pButton type="button" icon="pi pi-check" label="Si" class="ui-button-rounded ui-button-success"
+      (click)="cd.accept()"></button>
+    <button style="width: 48%; float: left; margin-left: 1%;" pButton type="button" icon="pi pi-times" label="No" class="ui-button-rounded ui-button-warning"
+      (click)="cd.reject()"></button>
+  </p-footer>
+</p-confirmDialog>
 <!-- Menú con Accordion -->
 <div id="menu-info" *ngIf="view.ready">
   <p-accordion [expandIcon]="null" [collapseIcon]="null" (onOpen)="onAccordion(true)" (onClose)="onAccordion(false)">
