Ajuste: depuración de código y traslado de procesamiento en la carga de servicios

--- a/src/app/dialog-urlservice/dialog-urlservice.component.html
+++ b/src/app/dialog-urlservice/dialog-urlservice.component.html
@@ -1,10 +1,10 @@
-<form [formGroup]="serviceForm" (ngSubmit)="serviceForm.valid && sendUrl()">
+<form [formGroup]="serviceForm" (ngSubmit)="sendUrl()">
   <div class="ui-g ui-fluid">
     <div class="ui-g-12 ui-md-12">
       <br>
       <div class="ui-inputgroup">
         <span class="ui-float-label">
-          <input type="url" formControlName="urlservice" [(ngModel)]="urlservice" pInputText>
+          <input type="url" formControlName="urlService" pInputText>
           <label for="clientId">URL del Servicio</label>
         </span>
         <span class="ui-inputgroup-addon"><i class="fa fa-globe"></i></span>
@@ -19,7 +19,7 @@
         class="ui-button-rounded ui-button-success" label="Guardar"></button>
     </div>
     <div class="ui-g-12 ui-md-6">
-      <button pButton type="button" (click)="cancel()" label="Cancelar" icon="pi pi-times"
+      <button pButton type="button" (click)="close()" label="Cancelar" icon="pi pi-times"
         class="ui-button-rounded ui-button-warning"></button>
     </div>
   </div>
